# NetworkManager

./: .gitignore  .travis.yml  NEWS  configure.ac
callouts/: nm-dispatcher.c
data/: 77-nm-unmanaged.rules  Makefile.am  NetworkManager.service.in
include/: nm-macros-internal.h  nm-test-utils.h
introspection/: nm-access-point.xml  nm-device-wifi.xml  nm-device.xml  nm-manager.xml
libnm/: libnm.ver  nm-client.c  nm-client.h  nm-device.c  nm-device.h  nm-manager.c  nm-manager.h  nm-object.c  nm-remote-settings.c  nm-vpn-plugin-old.c  nm-vpn-service-plugin.c
libnm-core/: Makefile.am  nm-core-internal.h  nm-keyfile-reader.c  nm-setting-8021x.c  nm-setting-connection.c  nm-setting-gsm.c  nm-setting-gsm.h  nm-setting-ip-config.c  nm-setting-ip6-config.c  nm-setting-ip6-config.h  nm-setting-wireless.c  nm-setting-wireless.h  nm-setting.c  nm-setting.h  nm-utils.c  nm-utils.h  nm-version.h
libnm-glib/: libnm-glib.ver  nm-access-point.c  nm-access-point.h  nm-client.c  nm-client.h  nm-device.c  nm-device.h  nm-object.c
libnm-util/: libnm-util.ver  nm-setting-bond.c  nm-setting-bond.h  nm-setting-connection.c  nm-setting-dcb.c  nm-setting-dcb.h  nm-setting-wireless.c  nm-setting-wireless.h  nm-utils.h
man/: Makefile.am  NetworkManager.conf.xml  NetworkManager.conf.xml.in  nmcli.xml
shared/: nm-test-utils.h
src/: Makefile.am  NetworkManagerUtils.c  NetworkManagerUtils.h  main-utils.c  main.c  nm-activation-request.c  nm-audit-manager.c  (+40 more)
src/settings/plugins/ofono/: Makefile.am  nm-ofono-connection.c  nm-ofono-connection.h  parser.c  parser.h  plugin.c  plugin.h
(+157 files in other folders)
